--- a/MSR/MSR-2-Management-Summary.jrxml
+++ b/MSR/MSR-2-Management-Summary.jrxml
@@ -37,29 +37,44 @@
 		<parameter name="customer" class="java.lang.String">
 			<defaultValueExpression><![CDATA["ARAB"]]></defaultValueExpression>
 		</parameter>
-		<parameter name="periodSelected" class="java.lang.Integer">
-			<defaultValueExpression><![CDATA[24228]]></defaultValueExpression>
+		<parameter name="periodSelected" class="java.lang.String">
+			<defaultValueExpression><![CDATA["20190601"]]></defaultValueExpression>
 		</parameter>
 		<queryString language="SQL">
-			<![CDATA[SELECT s1.customer, s1.userrole, s1.period_extracted, s1.nb_users
-  FROM  (SELECT customer, 'Sentinel-BU' as userrole, (date_part('year', export_date)*12+date_part('month', export_date)) AS period_extracted, COUNT(avq_user_id) AS nb_users
-  			FROM msr.avq_users 
-     	   group by customer, period_extracted
-  			) s1
-  WHERE s1.customer =   $P{customer} 
-  and s1.period_extracted =  $P{periodSelected}]]>
+			<![CDATA[SELECT customer, 
+       CASE group_id WHEN '' THEN 'Standard accounts'
+                               WHEN 'admin' THEN 'Admin accounts'
+                               WHEN 'dba' THEN 'Dba accounts	' 
+                               ELSE 'Other'
+                 END AS user_role , 
+       extract(year from export_date) as period_year, 
+	   LPAD(extract(month from export_date)::text, 2, '0') as period_month, 
+	   CONCAT (extract(year from export_date), ' - ',LPAD(extract(month from export_date)::text, 2, '0') ) AS yearmonth, 
+	   COUNT(group_id) AS nb_users
+  FROM msr.unix_dba_users
+  WHERE (customer = 'ARAB')
+  AND  export_date >= to_date( $P{periodSelected} , 'YYYYMMDD') - interval '6 months' 
+  AND  export_date <= to_date('20190601', 'YYYYMMDD') 
+  GROUP BY customer, group_id, period_year, period_month
+  ORDER BY customer, group_id, period_year, period_month]]>
 		</queryString>
 		<field name="customer" class="java.lang.String">
 			<property name="com.jaspersoft.studio.field.label" value="customer"/>
-			<property name="com.jaspersoft.studio.field.tree.path" value="avq_users"/>
+			<property name="com.jaspersoft.studio.field.tree.path" value="unix_dba_users"/>
 		</field>
-		<field name="userrole" class="java.lang.String">
-			<property name="com.jaspersoft.studio.field.label" value="userrole"/>
+		<field name="user_role" class="java.lang.String">
+			<property name="com.jaspersoft.studio.field.label" value="user_role"/>
 		</field>
-		<field name="period_extracted" class="java.lang.Double">
-			<property name="com.jaspersoft.studio.field.label" value="period_extracted"/>
+		<field name="period_year" class="java.lang.Double">
+			<property name="com.jaspersoft.studio.field.label" value="period_year"/>
 		</field>
-		<field name="nb_users" class="java.lang.Integer">
+		<field name="period_month" class="java.lang.String">
+			<property name="com.jaspersoft.studio.field.label" value="period_month"/>
+		</field>
+		<field name="yearmonth" class="java.lang.String">
+			<property name="com.jaspersoft.studio.field.label" value="yearmonth"/>
+		</field>
+		<field name="nb_users" class="java.lang.Long">
 			<property name="com.jaspersoft.studio.field.label" value="nb_users"/>
 		</field>
 	</subDataset>
@@ -257,7 +272,7 @@ GROUP BY customer, export_date]]>
 		</band>
 	</pageHeader>
 	<detail>
-		<band height="352" splitType="Stretch">
+		<band height="205" splitType="Stretch">
 			<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.FreeLayout"/>
 			<textField hyperlinkType="LocalAnchor" bookmarkLevel="1">
 				<reportElement style="Header-2" positionType="Float" x="0" y="0" width="483" height="20" uuid="9ec11c44-0b91-45bc-8154-0049d3f065ce"/>
@@ -380,9 +395,51 @@ GROUP BY customer, export_date]]>
 				</jr:table>
 			</componentElement>
 		</band>
+		<band height="237">
+			<stackedBar3DChart>
+				<chart evaluationTime="Report" theme="eye.candy.sixties">
+					<reportElement key="" x="0" y="0" width="483" height="237" uuid="e7c228f3-9ae9-48e3-b8d3-82e1b379fa4c"/>
+					<chartTitle>
+						<font fontName="Arial" size="16"/>
+						<titleExpression><![CDATA["Unix Accounts by Type"]]></titleExpression>
+					</chartTitle>
+					<chartSubtitle/>
+					<chartLegend>
+						<font fontName="Arial" size="12"/>
+					</chartLegend>
+				</chart>
+				<categoryDataset>
+					<dataset>
+						<datasetRun subDataset="EmployeeByType" uuid="fbce3640-dd22-4344-af6e-8fc0e57f7264"/>
+					</dataset>
+					<categorySeries>
+						<seriesExpression><![CDATA[$F{user_role}]]></seriesExpression>
+						<categoryExpression><![CDATA[$F{yearmonth}]]></categoryExpression>
+						<valueExpression><![CDATA[$F{nb_users}]]></valueExpression>
+					</categorySeries>
+				</categoryDataset>
+				<bar3DPlot isShowLabels="true">
+					<plot>
+						<seriesColor seriesOrder="0" color="#C4000A"/>
+						<seriesColor seriesOrder="1" color="#FC9F42"/>
+						<seriesColor seriesOrder="2" color="#80C91A"/>
+						<seriesColor seriesOrder="3" color="#A27696"/>
+						<seriesColor seriesOrder="4" color="#521816"/>
+						<seriesColor seriesOrder="5" color="#9F8313"/>
+					</plot>
+					<itemLabel/>
+					<categoryAxisFormat>
+						<axisFormat labelColor="#000000" tickLabelColor="#000000" verticalTickLabels="true" axisLineColor="#000000"/>
+					</categoryAxisFormat>
+					<valueAxisFormat>
+						<axisFormat labelColor="#000000" tickLabelColor="#000000" axisLineColor="#000000"/>
+					</valueAxisFormat>
+				</bar3DPlot>
+			</stackedBar3DChart>
+		</band>
 	</detail>
 	<pageFooter>
-		<band height="51" splitType="Stretch">
+		<band height="55" splitType="Stretch">
 			<image>
 				<reportElement x="0" y="41" width="153" height="10" uuid="0e03300e-547b-49bc-8fba-b3589a5c6e51"/>
 				<imageExpression><![CDATA["Images/Avaloq/AVA_claim_100_rgb_black.png"]]></imageExpression>
