--- a/MSR/MSR-2-Management-Summary.jrxml
+++ b/MSR/MSR-2-Management-Summary.jrxml
@@ -41,35 +41,102 @@
 			<defaultValueExpression><![CDATA["20190601"]]></defaultValueExpression>
 		</parameter>
 		<queryString language="SQL">
-			<![CDATA[SELECT customer, 
-       CASE group_id WHEN '' THEN 'Standard accounts'
-                               WHEN 'admin' THEN 'Admin accounts'
-                               WHEN 'dba' THEN 'Dba accounts	' 
-                               ELSE 'Other'
-                 END AS user_role , 
-       extract(year from export_date) as period_year, 
-	   LPAD(extract(month from export_date)::text, 2, '0') as period_month, 
-	   CONCAT (extract(year from export_date), ' - ',LPAD(extract(month from export_date)::text, 2, '0') ) AS yearmonth, 
-	   COUNT(group_id) AS nb_users
-  FROM msr.unix_dba_users
-  WHERE (customer = 'ARAB')
-  AND  export_date >= to_date( $P{periodSelected} , 'YYYYMMDD') - interval '6 months' 
-  AND  export_date <= to_date('20190601', 'YYYYMMDD') 
-  GROUP BY customer, group_id, period_year, period_month
-  ORDER BY customer, group_id, period_year, period_month]]>
+			<![CDATA[SELECT extract(year from a.export_date) as period_year,
+       extract(month from a.export_date) as period_month,  
+	   'Emergency users (High Risk)' as user_type,  
+	   CONCAT(extract(year from a.export_date), ' - ', 
+	   to_char( extract(month from a.export_date), '00') ) as yearmonth,
+	   count(a.user_id) as nb_users
+from (SELECT export_date as export_date,
+			   user_id as user_id
+		  FROM msr.unix_dba_users 
+		  WHERE customer =  $P{customer} 
+		  AND export_date >= to_date( $P{periodSelected} , 'YYYYMMDD') - interval '5 months'
+		  AND export_date <= to_date( $P{periodSelected} , 'YYYYMMDD') 
+		  AND user_id LIKE 'E_%'
+	  UNION
+	  SELECT export_date as export_date, 
+			   user_id as user_id
+		  FROM msr.windows_users 
+		  WHERE customer =  $P{customer} 
+		  AND export_date >= to_date( $P{periodSelected} , 'YYYYMMDD') - interval '5 months' 
+		  AND export_date <= to_date( $P{periodSelected} , 'YYYYMMDD') 
+		  AND user_id LIKE 'E_%'
+	  UNION
+	  SELECT export_date as export_date, 
+			   win_user as user_id
+		  FROM msr.avq_users 
+		  WHERE customer =  $P{customer} 
+		  AND export_date >= to_date( $P{periodSelected} , 'YYYYMMDD') - interval '5 months' 
+		  AND export_date <= to_date( $P{periodSelected} , 'YYYYMMDD') 
+		  AND win_user LIKE 'E_%'
+	) as a
+  GROUP BY period_year, period_month, user_type
+UNION ALL
+SELECT extract(year from a.export_date) as period_year,
+       extract(month from a.export_date) as period_month,  
+	   'Sensitive and Export (High Risk)' as user_type,  
+	   CONCAT(extract(year from a.export_date), ' - ', 
+	   to_char( extract(month from a.export_date), '00') ),
+	   count(a.user_id)
+FROM msr.avq_users as a
+  WHERE customer =  $P{customer} 
+  AND export_date >= to_date($P{periodSelected} , 'YYYYMMDD') - interval '5 months'
+  AND export_date <= to_date( $P{periodSelected} , 'YYYYMMDD')
+  AND is_sensitive = 'Yes'
+  AND is_export = 'Yes'
+  GROUP BY period_year, period_month, user_type
+UNION ALL
+SELECT extract(year from a.export_date) as period_year,
+       extract(month from a.export_date) as period_month,  
+	   'Sensitive only (Medium Risk)' as user_type,  
+	   CONCAT(extract(year from a.export_date), ' - ', 
+	   to_char( extract(month from a.export_date), '00') ),
+	   count(a.user_id)
+FROM msr.avq_users as a
+  WHERE customer =  $P{customer} 
+  AND export_date >= to_date( $P{periodSelected} , 'YYYYMMDD') - interval '5 months'
+  AND export_date <= to_date( $P{periodSelected} , 'YYYYMMDD')
+  AND is_sensitive = 'Yes'
+  AND is_export = 'No'
+  GROUP BY period_year, period_month, user_type
+UNION ALL
+SELECT extract(year from a.export_date) as period_year,
+       extract(month from a.export_date) as period_month,  
+	   'Export only (Low risk)' as user_type,  
+	   CONCAT(extract(year from a.export_date), ' - ', 
+	   to_char( extract(month from a.export_date), '00') ),
+	   count(a.user_id)
+FROM msr.avq_users as a
+  WHERE customer =  $P{customer} 
+  AND export_date >= to_date( $P{periodSelected} , 'YYYYMMDD') - interval '5 months'
+  AND export_date <= to_date( $P{periodSelected} , 'YYYYMMDD')
+  AND is_sensitive = 'No'
+  AND is_export = 'Yes'
+  GROUP BY period_year, period_month, user_type
+UNION ALL
+SELECT extract(year from a.export_date) as period_year,
+       extract(month from a.export_date) as period_month,  
+	   'Standard (Low Risk)' as user_type,  
+	   CONCAT(extract(year from a.export_date), ' - ', 
+	   to_char( extract(month from a.export_date), '00') ),
+	   count(a.user_id)
+FROM msr.avq_users as a
+  WHERE customer =  $P{customer} 
+  AND export_date >= to_date( $P{periodSelected} , 'YYYYMMDD') - interval '5 months'
+  AND export_date <= to_date( $P{periodSelected} , 'YYYYMMDD')
+  AND is_sensitive = 'No'
+  AND is_export = 'Yes'
+  GROUP BY period_year, period_month, user_type]]>
 		</queryString>
-		<field name="customer" class="java.lang.String">
-			<property name="com.jaspersoft.studio.field.label" value="customer"/>
-			<property name="com.jaspersoft.studio.field.tree.path" value="unix_dba_users"/>
-		</field>
-		<field name="user_role" class="java.lang.String">
-			<property name="com.jaspersoft.studio.field.label" value="user_role"/>
-		</field>
 		<field name="period_year" class="java.lang.Double">
 			<property name="com.jaspersoft.studio.field.label" value="period_year"/>
 		</field>
-		<field name="period_month" class="java.lang.String">
+		<field name="period_month" class="java.lang.Double">
 			<property name="com.jaspersoft.studio.field.label" value="period_month"/>
+		</field>
+		<field name="user_type" class="java.lang.String">
+			<property name="com.jaspersoft.studio.field.label" value="user_type"/>
 		</field>
 		<field name="yearmonth" class="java.lang.String">
 			<property name="com.jaspersoft.studio.field.label" value="yearmonth"/>
@@ -77,6 +144,7 @@
 		<field name="nb_users" class="java.lang.Long">
 			<property name="com.jaspersoft.studio.field.label" value="nb_users"/>
 		</field>
+		<sortField name="yearmonth"/>
 	</subDataset>
 	<subDataset name="UsersByType" uuid="655f29d9-2776-4be0-bbd2-831d37cfdbab">
 		<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
@@ -223,10 +291,10 @@ GROUP BY customer, export_date]]>
 		<defaultValueExpression><![CDATA["ARAB"]]></defaultValueExpression>
 	</parameter>
 	<parameter name="subsection" class="java.lang.Integer">
-		<defaultValueExpression><![CDATA[1]]></defaultValueExpression>
+		<defaultValueExpression><![CDATA[0]]></defaultValueExpression>
 	</parameter>
 	<parameter name="section" class="java.lang.Integer">
-		<parameterDescription><![CDATA[1]]></parameterDescription>
+		<defaultValueExpression><![CDATA[0]]></defaultValueExpression>
 	</parameter>
 	<parameter name="chapter" class="java.lang.Integer">
 		<defaultValueExpression><![CDATA[1]]></defaultValueExpression>
@@ -272,7 +340,7 @@ GROUP BY customer, export_date]]>
 		</band>
 	</pageHeader>
 	<detail>
-		<band height="205" splitType="Stretch">
+		<band height="199" splitType="Stretch">
 			<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.FreeLayout"/>
 			<textField hyperlinkType="LocalAnchor" bookmarkLevel="1">
 				<reportElement style="Header-2" positionType="Float" x="0" y="0" width="483" height="20" uuid="9ec11c44-0b91-45bc-8154-0049d3f065ce"/>
@@ -395,44 +463,73 @@ GROUP BY customer, export_date]]>
 				</jr:table>
 			</componentElement>
 		</band>
-		<band height="237">
+		<band height="55">
+			<staticText>
+				<reportElement style="Header-3" x="0" y="35" width="483" height="20" uuid="7e5b1d11-f067-40d7-9022-358d46cf3c8b"/>
+				<text><![CDATA[Business]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="1" y="0" width="483" height="30" uuid="593fbb00-7416-40ff-98c0-9973e36799d2"/>
+				<text><![CDATA[From a risk perspective, the changes introduced during current month did not modify the security exposure of the Client.]]></text>
+			</staticText>
+		</band>
+		<band height="260">
+			<property name="com.jaspersoft.studio.unit.height" value="px"/>
 			<stackedBar3DChart>
 				<chart evaluationTime="Report" theme="eye.candy.sixties">
-					<reportElement key="" x="0" y="0" width="483" height="237" uuid="e7c228f3-9ae9-48e3-b8d3-82e1b379fa4c"/>
+					<reportElement key="" x="0" y="0" width="483" height="260" isRemoveLineWhenBlank="true" uuid="81f752aa-87d4-4057-b549-75ab03916aa7">
+						<property name="com.jaspersoft.studio.unit.height" value="px"/>
+					</reportElement>
 					<chartTitle>
 						<font fontName="Arial" size="16"/>
 						<titleExpression><![CDATA["Unix Accounts by Type"]]></titleExpression>
 					</chartTitle>
 					<chartSubtitle/>
-					<chartLegend>
-						<font fontName="Arial" size="12"/>
+					<chartLegend position="Bottom">
+						<font fontName="Arial" size="10"/>
 					</chartLegend>
 				</chart>
 				<categoryDataset>
 					<dataset>
-						<datasetRun subDataset="EmployeeByType" uuid="fbce3640-dd22-4344-af6e-8fc0e57f7264"/>
+						<datasetRun subDataset="EmployeeByType" uuid="b4fb23b7-5a92-4bfb-8c01-a7bb0bb3f727"/>
 					</dataset>
 					<categorySeries>
-						<seriesExpression><![CDATA[$F{user_role}]]></seriesExpression>
+						<seriesExpression><![CDATA[$F{user_type}]]></seriesExpression>
 						<categoryExpression><![CDATA[$F{yearmonth}]]></categoryExpression>
 						<valueExpression><![CDATA[$F{nb_users}]]></valueExpression>
 					</categorySeries>
 				</categoryDataset>
 				<bar3DPlot isShowLabels="true">
-					<plot>
-						<seriesColor seriesOrder="0" color="#C4000A"/>
-						<seriesColor seriesOrder="1" color="#FC9F42"/>
-						<seriesColor seriesOrder="2" color="#80C91A"/>
-						<seriesColor seriesOrder="3" color="#A27696"/>
-						<seriesColor seriesOrder="4" color="#521816"/>
+					<plot backgroundAlpha="1.0">
+						<seriesColor seriesOrder="0" color="#C00000"/>
+						<seriesColor seriesOrder="1" color="#E46C0A"/>
+						<seriesColor seriesOrder="2" color="#FFC000"/>
+						<seriesColor seriesOrder="3" color="#92D050"/>
+						<seriesColor seriesOrder="4" color="#00B050"/>
 						<seriesColor seriesOrder="5" color="#9F8313"/>
 					</plot>
-					<itemLabel/>
+					<itemLabel>
+						<font fontName="Arial" size="8"/>
+					</itemLabel>
 					<categoryAxisFormat>
-						<axisFormat labelColor="#000000" tickLabelColor="#000000" verticalTickLabels="true" axisLineColor="#000000"/>
+						<axisFormat labelColor="#000000" tickLabelColor="#000000" verticalTickLabels="true" axisLineColor="#000000">
+							<labelFont>
+								<font fontName="Arial" size="10"/>
+							</labelFont>
+							<tickLabelFont>
+								<font fontName="Arial"/>
+							</tickLabelFont>
+						</axisFormat>
 					</categoryAxisFormat>
 					<valueAxisFormat>
-						<axisFormat labelColor="#000000" tickLabelColor="#000000" axisLineColor="#000000"/>
+						<axisFormat labelColor="#000000" tickLabelColor="#000000" axisLineColor="#000000">
+							<labelFont>
+								<font fontName="Arial" size="10"/>
+							</labelFont>
+							<tickLabelFont>
+								<font fontName="Arial" size="10"/>
+							</tickLabelFont>
+						</axisFormat>
 					</valueAxisFormat>
 				</bar3DPlot>
 			</stackedBar3DChart>
